--- a/WebShopREST/WebShopREST/WebContent/html/restaurant.html
+++ b/WebShopREST/WebShopREST/WebContent/html/restaurant.html
@@ -4,6 +4,7 @@
 	<meta charset="UTF-8">
 	<link rel="stylesheet" type="text/css" href="../css/restaurant.css"/>
 	<script src="../jquery-3.3.1.min.js"></script>
+	<script src="../js/restaurant.js"></script>
 </head>
 <body>
 	<header id="titleRectangle">
@@ -26,15 +27,13 @@
                 <th>
                     <td>
                         <div class="container-pic">
-                            <img src="../images/chinese.png" style="width: 210px;"/>
+                            <img id="logo" src="../images/chinese.png" style="width: 210px;"/>
                         </div>
                     </td>
                 </th>
                 <th>
                     <td>
                         <div class="container-data-labels">
-                            <label class="label">Naziv:</label>
-                            <br>
                             <label class="label">Lokacija:</label>
                             <br>
                             <label class="label">Tip:</label>
@@ -46,15 +45,13 @@
                     </td>
                     <td>
                         <div class="container-data-data">
-                            <input class="inputBoxes" type="text" value="Chinese wonderland" disabled />
+                            <input id="address" class="inputBoxes" type="text" disabled />
                             <br>
-                            <input class="inputBoxes" type="text" value="Batutova 5, Beograd, Srbija" disabled />
+                            <input id="type" class="inputBoxes" type="text" disabled />
                             <br>
-                            <input class="inputBoxes" type="text" value="kineski" disabled />
+                            <input id="grade" class="inputBoxes" type="text" disabled />
                             <br>
-                            <input class="inputBoxes" type="text" value="4.5" disabled />
-                            <br>
-                            <input class="inputBoxes" type="text" value="radi" disabled />
+                            <input id="status" class="inputBoxes" type="text" disabled />
                         </div>
                     </td>  
                 </th>
@@ -107,7 +104,7 @@
 			<label id="promoText">&nbspKomentari</label>
 		</div>
 		<div style="height: 30px;"></div>
-		<table id="articlesTable">
+		<table id="commentsTable">
 			<thead>
 				<tr>
 					<th>Korisnik</th>
