--- a/WebShopREST/WebShopREST/WebContent/html/administrator.html
+++ b/WebShopREST/WebShopREST/WebContent/html/administrator.html
@@ -15,6 +15,7 @@
 		<div>
 			<br />
 			<label id="korisniciText">&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbspKorisnici</label>
+			<button class="menuBtns" id="logoutBtn">Odjavi se</button>
 			<button class="menuBtns" id="profile">Moj profil</button>
 			<button class="menuBtns" id="restaurants">Restorani</button>
 			<button class="menuBtns" id="users">Korisnici</button>
