--- a/WebShopREST/WebShopREST/WebContent/html/index.html
+++ b/WebShopREST/WebShopREST/WebContent/html/index.html
@@ -14,6 +14,7 @@
 		<div>
 			<br>
 			<label class="promoText">&nbsp&nbsp&nbspDobrodošli na mesto</label>
+			<button class="navBtns" id="logoutBtn">Odjavi se</button>
 			<button class="navBtns" id="loginBtn">Prijava</button>
 			<button class="navBtns" id="registerBtn">Registracija</button>
 			<button class="navBtns" id="profileBtn">Moj profil</button>
