--- a/WebShopREST/WebShopREST/WebContent/html/manager.html
+++ b/WebShopREST/WebShopREST/WebContent/html/manager.html
@@ -15,6 +15,7 @@
 		<div>
 			<br />
 			<label id="buyersText"></label>
+			<button class="menuBtns" id="logoutBtn">Odjavi se</button>
 			<button class="menuBtns" id="profile">Moj profil</button>
 			<button class="menuBtns" id="ordersAndBuyers">Porudžbine i kupci</button>
 			<button class="menuBtns" id="restaurantsBtn">Restorani</button>
