dodata meni dugmad na profilnu stranu

--- a/WebShopREST/WebShopREST/WebContent/html/userProfile.html
+++ b/WebShopREST/WebShopREST/WebContent/html/userProfile.html
@@ -13,7 +13,12 @@
     <div id="profileRectangle">
         <div>
 			<br>
-            <button id="changeBtn">Izmeni profil</button>
+			<button class="menuBtns" id="logoutBtn">Odjavi se</button>
+            <button class="menuBtns" id="changeBtn">Izmeni profil</button>
+			<button class="menuBtns" id="profile">Moj profil</button>
+			<button class="menuBtns" id="managerBtn">Moj restoran</button>
+			<button class="menuBtns" id="restaurantsBtn">Restorani</button>
+			<button class="menuBtns" id="users">Korisnici</button>
 			<label id="promoText"></label>
 		</div>
         <table class="container">
