priprema svih html-ova za porudzbine

--- a/WebShopREST/WebShopREST/WebContent/html/manager.html
+++ b/WebShopREST/WebShopREST/WebContent/html/manager.html
@@ -83,7 +83,7 @@
 					<th>Naziv</th>
 					<th>Cena</th> 
 					<th>Tip</th>
-					<th>Količina</th> 
+					<th>Veličina</th> 
 					<th>Opis</th>
 				</tr>
 			</thead>
