--- a/WebShopREST/WebShopREST/WebContent/html/restaurant.html
+++ b/WebShopREST/WebShopREST/WebContent/html/restaurant.html
@@ -61,6 +61,11 @@
 			<br>
 			<label id="promoText">&nbspArtikli</label>
 		</div>
+		<div id="actionBtnsDiv" style="text-align: center; margin: 0 auto; width: 400px;">
+			<button id="checkCartBtn" class="actionBtn">Pregled korpe</button>
+			<button id="addToCartBtn" class="actionBtn">Dodaj artikal u korpu</button>
+		</div>
+		<div id="divBetweenButtonAndMyOrders" style="height: 20px;"></div>
 		<div style="height: 30px;"></div>
 		<table id="articlesTable">
 			<thead>
@@ -68,8 +73,9 @@
 				<th>Naziv</th>
 				<th>Cena</th>
 				<th>Tip</th>
-				<th>Količina</th>
+				<th>Veličina</th>
 				<th>Opis</th>
+				<th>Količina</th>
 			</thead>
 			<tbody id="tableBody">
 				
