--- a/WebShopREST/WebShopREST/WebContent/html/userProfile.html
+++ b/WebShopREST/WebShopREST/WebContent/html/userProfile.html
@@ -46,6 +46,8 @@
                             <label class="label">Datum rođenja:</label>
                             <br>
                             <label class="label">Pol:</label>
+                            <br>
+                            <label id="buyerType" class="label">Tip kupca:</label>
                         </div>
                     </td>
                     <td>
@@ -57,6 +59,8 @@
                             <input id="dateOfBirth" class="inputBoxes" type="text" disabled />
                             <br>
                             <input id="gender" class="inputBoxes" type="text" disabled />
+                            <br>
+                            <input id="buyerTypeInput" class="inputBoxes" type="text" disabled />
                         </div>
                     </td>  
                 </th>
@@ -92,6 +96,8 @@
 				<option value="Dostavljena">Dostavljena</option>
 				<option value="Otkazana">Otkazana</option>
 			</select>
+			<input id="notDeliveredOrders" type="checkbox" style="margin-left: 18px; cursor: pointer;"/>
+			<label id="labelNotDeliveredOrders" style="color: black; font-weight: bold; font-size: 13pt;">Nedostavljene porudžbine</label>
 		</div>
         <div id="mojePorudzbineTitleDiv">
             <br>
@@ -108,6 +114,10 @@
 			<button id="deliveredBtn" class="actionBtn">Prebaci stanje u dostavljena</button>
 		</div>
 		<div id="divBetweenButtonAndMyOrders" style="height: 20px;"></div>
+		<div id="actionBtnsDiv3" style="text-align: center; margin: 0 auto;">
+			<button id="cancelBtn" class="actionBtn">Otkaži</button>
+		</div>
+		<div id="divBetweenButtonAndMyOrders2" style="height: 20px;"></div>
         <table id="articlesTable">
 			<thead>
 				<tr>
