pretraga - porudzbine za menadzerov restoran

--- a/WebShopREST/WebShopREST/WebContent/html/orders_and_buyers_of_restaurant.html
+++ b/WebShopREST/WebShopREST/WebContent/html/orders_and_buyers_of_restaurant.html
@@ -28,7 +28,7 @@
 		 <div id="searchDiv" style="padding-left: 3%;">
 			<label class="searchText">Pretraga:</label>
 			<input id="searchPrice" class="inputBox" type="text" placeholder="Cena (opseg)">
-			<input id="searchDateAndTime" class="inputBox" type="text" placeholder="Datum (opseg)">
+			<input id="searchDateAndTime" class="inputBox" type="text" placeholder="Datum (opseg, npr: yyyy-mm-dd/yyyy-mm-dd)">
 			<input id="searchIcon" type="image" src="../images/searchIcon.png" />
 		</div>
         <div id="filterDiv" style="padding-left: 3%; padding-top: 15px;">
