komentari - src i nova dugmad

--- a/WebShopREST/WebShopREST/WebContent/html/manager.html
+++ b/WebShopREST/WebShopREST/WebContent/html/manager.html
@@ -65,6 +65,10 @@
                 </th>
             </tbody>
         </table>
+        <div>
+			<br>
+			<label class="promoText">&nbspArtikli</label>
+		</div>
 		<div style="text-align: center; float: left;">
 			<button class="navBtn" id="addArticle">Dodaj artikal</button>
 			<button class="navBtn" id="updateArticle">Izmeni artikal</button>
@@ -92,10 +96,33 @@
 				
 			</tbody>
 		</table>
+		<div>
+			<br>
+			<label class="promoText">&nbspKomentari</label>
+		</div>
+		<div style="text-align: center; float: left;">
+			<button class="navBtn" id="approveComment">Odobri komentar</button>
+			<button class="navBtn" id="declineComment">Odbij komentar</button>
+		</div>
+		<br>
+		<table id="commentsTable">
+			<thead>
+				<tr>
+                    <th>Kupac</th>
+					<th>Komentar</th> 
+					<th>Ocena</th>
+				</tr>
+			</thead>
+		
+			<tbody id="tableBody">
+				
+			</tbody>
+		</table>
         <br>
         <div>
-            <label class="searchText" style="padding-left: 20px;">Lokacija restorana</label>
-        </div>
+			<br>
+			<label class="promoText">&nbspLokacija restorana</label>
+		</div>
         <div class="location" style="max-width: max-content;">
 
         </div>
