--- a/WebShopREST/WebShopREST/WebContent/html/userProfile.html
+++ b/WebShopREST/WebShopREST/WebContent/html/userProfile.html
@@ -116,6 +116,7 @@
 		<div id="divBetweenButtonAndMyOrders" style="height: 20px;"></div>
 		<div id="actionBtnsDiv3" style="text-align: center; margin: 0 auto;">
 			<button id="cancelBtn" class="actionBtn">Otkaži</button>
+			<button id="leaveComment" class="actionBtn">Dodaj komentar</button>
 		</div>
 		<div id="divBetweenButtonAndMyOrders2" style="height: 20px;"></div>
         <table id="articlesTable">
