--- a/WebShopREST/WebShopREST/WebContent/html/comment.html
+++ b/WebShopREST/WebShopREST/WebContent/html/comment.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
 	<link rel="stylesheet" type="text/css" href="../css/register.css"/>
 	<script src="../jquery-3.3.1.min.js"></script>
-	<script src="../js/register.js"></script>
+	<script src="../js/comment.js"></script>
 </head>
 <body>
     <div class="container">
