--- a/WebShopREST/WebShopREST/WebContent/html/comment.html
+++ b/WebShopREST/WebShopREST/WebContent/html/comment.html
@@ -19,11 +19,11 @@
                 <label>Ocena *</label>
                 <select id="grade" style="cursor: pointer;">
                 	<option value="">Izaberi ocenu</option>
-                    <option value="1">1</option>
-                    <option value="2">2</option>
-                    <option value="3">3</option>
-                    <option value="4">4</option>
-                    <option value="5">5</option>
+                    <option value="ONE">1</option>
+                    <option value="TWO">2</option>
+                    <option value="THREE">3</option>
+                    <option value="FOUR">4</option>
+                    <option value="FIVE">5</option>
                 </select>
             </div>
             <div class="btn">
