--- a/WebShopREST/WebShopREST/WebContent/html/manager.html
+++ b/WebShopREST/WebShopREST/WebContent/html/manager.html
@@ -108,13 +108,15 @@
 		<table id="commentsTable">
 			<thead>
 				<tr>
+					<th>ID</th>
                     <th>Kupac</th>
 					<th>Komentar</th> 
 					<th>Ocena</th>
+					<th>Odobren</th>
 				</tr>
 			</thead>
 		
-			<tbody id="tableBody">
+			<tbody id="tableBody2">
 				
 			</tbody>
 		</table>
