prikaz u tabeli i blokiranje klikom na dugme

--- a/WebShopREST/WebShopREST/WebContent/html/administrator.html
+++ b/WebShopREST/WebShopREST/WebContent/html/administrator.html
@@ -38,7 +38,8 @@
 			</select>
 		</div>
 		<div style="height: 50px;"></div>
-		<div id="actionBtnsDiv" style="text-align: center; margin: 0 auto; width: 600px;">
+		<div id="actionBtnsDiv" style="text-align: center; margin: 0 auto; width: 800px;">
+			<button class="administratorBtns" id="blockUser">Blokiraj korisnika</button>
 			<button class="administratorBtns" id="removeUser">Obriši korisnika</button>
 			<button class="administratorBtns" id="delivererAdd">Dodaj dostavljača</button>
 			<button class="administratorBtns" id="managerAdd">Dodaj menadžera</button>
