zabranjeno logovanje blokiranog korisnika

--- a/WebShopREST/WebShopREST/WebContent/html/login.html
+++ b/WebShopREST/WebShopREST/WebContent/html/login.html
@@ -20,6 +20,7 @@
                     <input id="password" type="password"/>
                 </div>
                 <div id="errorDiv" style="color: red; margin-bottom: 20px;">Korisničko ime i lozinka se ne poklapaju</div>
+                <div id="blockDiv" style="color: red; margin-bottom: 20px;">Blokirani ste!</div>
                 <div class="forgot-pass"><a href="#">Zaboravili ste lozinku?</a></div>
                 <div class="btn">
                     <div class="inner"></div>
