--- a/WebShopREST/WebShopREST/WebContent/html/manager.html
+++ b/WebShopREST/WebShopREST/WebContent/html/manager.html
@@ -5,6 +5,8 @@
 	<link rel="stylesheet" type="text/css" href="../css/manager.css"/>
 	<script src="../jquery-3.3.1.min.js"></script>
 	<script src="../js/manager.js"></script>
+	<script src="https://cdn.jsdelivr.net/gh/openlayers/openlayers.github.io@master/en/v6.6.1/build/ol.js"></script>
+	<link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/openlayers/openlayers.github.io@master/en/v6.6.1/css/ol.css" type="text/css">
 </head>
 <body>
 	<header id="titleRectangle">
@@ -125,12 +127,14 @@
 			<br>
 			<label class="promoText">&nbspLokacija restorana</label>
 		</div>
-        <div class="location" style="max-width: max-content;">
-
-        </div>
+		<br/>
+		<div id="map" class="map"></div>
+        <!-- <div class="location" style="max-width: max-content;">
+			
+        </div> -->
 	</div>
 	
-	<script>
+	<script type="text/javascript">
 		$(document).ready(function(){
 			$('#ordersAndBuyers').click(function(){
 				window.location.href='orders_and_buyers_of_restaurant.html';
@@ -151,6 +155,19 @@
 			    if(!selected)
 			            $(this).addClass("selected");
 			});
+
+		var map = new ol.Map({
+		target: 'map',
+		layers: [
+			new ol.layer.Tile({
+			source: new ol.source.OSM()
+			})
+		],
+		view: new ol.View({
+			center: ol.proj.fromLonLat([45.2, 19.8]),
+			zoom: 6
+		})
+		});
 		});
 	</script>
 </body>
